[docs] Minor doc CSS fixes after mdBook updated to 0.4.43
This commit updates a couple of minor properties in our custom CSS files
to ensure that content is rendering properly after updating mdBook to
0.4.43. This includes using the scrollbar colour instead of the icon
colour for the sidebar resize navigation element (as our icon colour is
white, which matches the page background), and ensuring the new `label`
type resize indicator (previously a `button`) renders in line with the
other buttons by displaying it flexibly justified so that it appears
vertically centered.

--- a/site/book-theme/css/chrome.css
+++ b/site/book-theme/css/chrome.css
@@ -74,6 +74,9 @@ html.sidebar-visible #menu-bar {
     line-height: var(--menu-bar-height);
     cursor: pointer;
     transition: color 0.5s;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
 }
 @media only screen and (max-width: 420px) {
     #menu-bar i, #menu-bar .icon-button {
@@ -495,7 +498,7 @@ html:not(.sidebar-resizing) .sidebar {
 .sidebar-resize-handle .sidebar-resize-indicator {
     width: 100%;
     height: 12px;
-    background-color: var(--icons);
+    background-color: var(--scrollbar);
     margin-inline-start: var(--sidebar-resize-indicator-space);
 }
 
